# pandas-ts

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  index.json  info.json  pyproject.toml  regressions.json  regressions.xml
.github/workflows/: asv-pr.yml  code_style.yml  publish-benchmarks-pr.yml  smoke-test.yml  testing-and-coverage.yml  type-checking.yml
_results/: benchmarks.json
_results/gh-runner/: 01427701-virtualenv-py3.10-Cython-build-packaging.json  06a36027-virtualenv-py3.10-Cython-build-packaging.json  097c1e60-virtualenv-py3.10-Cython-build-packaging.json  24d32a0e-virtualenv-py3.10-Cython-build-packaging.json  29a61e3a-virtualenv-py3.10-Cython-build-packaging.json  2c01f155-virtualenv-py3.10-Cython-build-packaging.json  30669538-virtualenv-py3.10-Cython-build-packaging.json  3905add6-virtualenv-py3.10-Cython-build-packaging.json  3b12a0f7-virtualenv-py3.10-Cython-build-packaging.json  444b16c5-virtualenv-py3.10-Cython-build-packaging.json  4b432612-virtualenv-py3.10-Cython-build-packaging.json  4b47962e-virtualenv-py3.10-Cython-build-packaging.json  60fff6ff-virtualenv-py3.10-Cython-build-packaging.json  656d3f53-virtualenv-py3.10-Cython-build-packaging.json  69875ebc-virtualenv-py3.10-Cython-build-packaging.json  7cac8b35-virtualenv-py3.10-Cython-build-packaging.json  7fb5861b-virtualenv-py3.10-Cython-build-packaging.json  81aa7b3d-virtualenv-py3.10-Cython-build-packaging.json  9960e680-virtualenv-py3.10-Cython-build-packaging.json  a1d7ef67-virtualenv-py3.10-Cython-build-packaging.json  aa45391b-virtualenv-py3.10-Cython-build-packaging.json  b32f444c-virtualenv-py3.10-Cython-build-packaging.json  c1b2d737-virtualenv-py3.10-Cython-build-packaging.json  ca5baa59-virtualenv-py3.10-Cython-build-packaging.json  ee85662b-virtualenv-py3.10-Cython-build-packaging.json  fb0f2b7a-virtualenv-py3.10-Cython-build-packaging.json  fbe131a1-virtualenv-py3.10-Cython-build-packaging.json
benchmarks/: asv.conf.json  benchmarks.py
docs/: conf.py  index.rst  requirements.txt
docs/notebooks/: intro_notebook.ipynb
graphs/summary/: benchmarks.Pack.time_pack_flat.json  benchmarks.PackAndApplyLength.time_groupby.json  benchmarks.PackAndApplyLength.time_packed.json  benchmarks.PackAndApplyLengthFiveTimes.time_packed.json  benchmarks.PackAndApplyLengthFiveTimes.time_sort_groupby.json  benchmarks.mem_list.json  benchmarks.time_computation.json
src/pandas_ts/: __init__.py  packer.py  ts_accessor.py  ts_dtype.py  ts_ext_array.py  utils.py
tests/pandas_ts/: conftest.py  test_example_module.py  test_packer.py  test_ts_accessor.py  test_ts_dtype.py  test_ts_ext_array.py
